2025: day 12: finished task 2

--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "advent-of-code",
   "version": "1.0.0",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": "",
